--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 body {
-color: aqua;
-background-color: black;
-}
+    color: rgb(8, 59, 59);
+    background-color: black;
+    }
+    section {
+
+        background-color: blueviolet;
+    }
