--- a/style.css
+++ b/style.css
@@ -4,4 +4,6 @@ body {
     }
     section {
         background-color: blueviolet;
+        padding-top: 80px;
+        padding-bottom: 80px;
     }
