--- a/style.css
+++ b/style.css
@@ -6,4 +6,6 @@ body {
         background-color: blueviolet;
         padding-top: 80px;
         padding-bottom: 80px;
+        display: flex;
+        justify-content: center;
     }
