--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
     }
     section {
         background-color: blueviolet;
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding-top: 70px;
+        padding-bottom: 50px;
+        padding-left: 100;
         display: flex;
         justify-content: center;
     }
